lightbox doesn't fit on small screens fixed

--- a/src/app/components/lightbox/lightbox.component.css
+++ b/src/app/components/lightbox/lightbox.component.css
@@ -2,10 +2,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    /* background-color: blueviolet; */
+    height: 100vh;
 }
 
 .container__actions {
-    width: 98%;
+    width: 88%;
 }
 
 .btn-close {
